k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
spec:
  ingressClassName: nginx
  rules:
  - host: "msproject.dev"
    http:
      paths:
      - path: /api/user
        pathType: Prefix
        backend:
          service:
            name: auth-srv
            port:
              number: 8000
      - path: /api/product
        pathType: Prefix
        backend:
          service:
            name: product-srv
            port:
              number: 8001
      - path: /api/order
        pathType: Prefix
        backend:
          service:
            name: order-srv
            port:
              number: 8002
      - path: /api/payment
        pathType: Prefix
        backend:
          service:
            name: payment-srv
            port:
              number: 8004
